Fix: prevent legend from overflowing

--- a/client/src/components/data display/PercentageBar.scss
+++ b/client/src/components/data display/PercentageBar.scss
@@ -2,6 +2,7 @@
 
 .percentage-bar {
   width: 100%;
+  overflow: hidden;
 
   &__legend {
     margin-bottom: 8px;
